# sandip-portfolio

./: .gitignore  README.md  plan.txt
backend/: pyproject.toml  requirements.txt  seed_pinecone.py
backend/app/: main.py
backend/app/api/routes/: accomplishments.py  admin.py  auth_route.py  bio.py  chat.py  contact.py  courses.py  enrollments.py  github.py  payments.py  projects.py  resume.py  tech_stack.py
backend/app/core/: auth_core.py  config.py  supabase.py
backend/app/models/: accomplishments.py  bio.py  course.py  enrollment.py  experience.py  knowledge.py  pinned_repo.py  project.py  resume_overview.py  tech.py
frontend/: deploy.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chatbot/: ChatWidget.tsx
frontend/src/components/sections/: About.tsx  Achievements.tsx  AnimatedSection.tsx  Contact.tsx  Courses.tsx  GitHub.tsx  Hero.tsx  Projects.tsx  Resume.tsx  TechStack.tsx
frontend/src/components/ui/: Button.tsx  Footer.tsx  Navbar.tsx  ProtectedRoute.tsx  PublicLayout.tsx  SectionWrapper.tsx  Tag.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: useAdminAuth.ts  useScrollAnimation.ts
frontend/src/lib/: api.ts  nanoid.ts  supabase.ts
frontend/src/pages/: CoursePage.tsx  Home.tsx
frontend/src/pages/Admin/: AdminDashboard.tsx  AdminLogin.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
supabase/: schema.sql
supabase/migrations/: add_pinned_repos.sql  seed_pinned_repos.sql
(+14 files in other folders)
