[project]
name = "sandip-portfolio-backend"
version = "0.1.0"
description = "Sandip Gupta Portfolio — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "groq>=0.9.0",
    "sentence-transformers>=2.7.0",   # produces 384-dim vectors for all-MiniLM-L6-v2
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "slowapi>=0.1.9",
    "pinecone>=8.1.2",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["app"]
